test/official_tests/variable/use_false_as_var.lox
// error: {"line":2,"message":"Expect a variable name","type":"ParseError"}
var false = "value";
